--- a/human-records/src/main/resources/application.properties
+++ b/human-records/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.application.name=human-records
+#spring.application.name=human-records
 management.endpoints.web.exposure.include=*
-server.port=8001
+#server.port=8001
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
 spring.sleuth.sampler.probability=1.0
 
 spring.zipkin.baseUrl=http://localhost:9411
+
+
