postgre database connection established

--- a/human-records/src/main/resources/application.properties
+++ b/human-records/src/main/resources/application.properties
@@ -1,10 +1,43 @@
 #spring.application.name=human-records
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 #server.port=8001
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.sleuth.sampler.probability=1.0
-
 spring.zipkin.baseUrl=http://localhost:9411
+# update - the object model created based on the mappings (annotations or XML) is compared with the existing schema,
+# and then Hibernate updates the schema according to the diff. It never deletes the existing tables or columns
+# even if they are no more required by the application
+# https://stackoverflow.com/questions/63801402/how-to-create-a-database-if-it-does-not-exist-with-springboot-jpa-and-sql-server?noredirect=1&lq=1
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+# datasource
+spring.datasource.url = jdbc:postgresql://localhost:5432/prod_db
+spring.datasource.username = prod_user
+spring.datasource.password = prod_user_password
+
+# By default this is embedded, which is why while using a non-embedded database this configuration is required
+# https://stackoverflow.com/questions/45082574/spring-boot-doesnt-load-data-to-initialize-database-using-data-sql
+#spring.datasource.initialization-mode=true
+#spring.datasource.platform=postgres
+# New way instead if spring.datasource
+# https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization.using-basic-sql-scripts
+# For the below configuration it will try to find a script data.sql and execute it
+spring.sql.init.mode=always
+# when init mode is always below property will try to fin data-postgresql.sql and execute it
+spring.sql.init.platform=postgresql
+
+# Need to figure out how to specify a location and loa the data
+# spring.sql.init.data-locations=classpath*:init-scripts/*
 
 
+spring.jpa.defer-datasource-initialization: true
+
+#Enable all Spring Boot Actuator endpoints.
+management.endpoints.web.exposure.include=*
