--- a/human-records/src/main/resources/bootstrap.yml
+++ b/human-records/src/main/resources/bootstrap.yml
@@ -1,19 +1,22 @@
 spring:
-  h2:
-    console.enabled: true
-  jpa:
-    defer-datasource-initialization: true
+#  sql:
+#    init:
+#      mode: always
+#  h2:
+#    console.enabled: true
+#  jpa:
+#    defer-datasource-initialization: true
   application:
     name: human-records
   profiles:
-    active: qa
+    active: prod
   cloud:
     config:
       uri: http://localhost:8071/
 
-#Enable all Spring Boot Actuator endpoints.
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+##Enable all Spring Boot Actuator endpoints.
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"
