properties created so that dev, qa & prod can be connected

--- a/human-records/src/main/resources/bootstrap.yml
+++ b/human-records/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
   application:
     name: human-records
   profiles:
-    active: prod
+    active: dev
   cloud:
     config:
       uri: http://localhost:8071/
