--- a/human-records/src/main/resources/application.properties
+++ b/human-records/src/main/resources/application.properties
@@ -41,3 +41,5 @@
 #
 ##Enable all Spring Boot Actuator endpoints.
 #management.endpoints.web.exposure.include=*
+
+#spring.sql.init.data-locations=classpath:/initscripts
