--- a/config-server/src/main/resources/config/human-records-dev.properties
+++ b/config-server/src/main/resources/config/human-records-dev.properties
@@ -4,7 +4,8 @@ native.property=native-dev
 #spring.application.name=human-records
 #management.endpoints.web.exposure.include=*
 #server.port=8001
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka-server-peer-a:8761/eureka/,http://eureka-server-peer-b:8762/eureka/,http://eureka-server-peer-c:8763/eureka/
+
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.baseUrl=http://localhost:9411
 # update - the object model created based on the mappings (annotations or XML) is compared with the existing schema,
