--- a/config-server/src/main/resources/config/human-records-qa.properties
+++ b/config-server/src/main/resources/config/human-records-qa.properties
@@ -6,7 +6,8 @@ server.port=8003
 
 native.property=native-qa
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka-server-peer-a:8761/eureka/,http://eureka-server-peer-b:8762/eureka/,http://eureka-server-peer-c:8763/eureka/
+
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.baseUrl=http://localhost:9411
 # update - the object model created based on the mappings (annotations or XML) is compared with the existing schema,
