--- a/date-utils/pom.xml
+++ b/date-utils/pom.xml
@@ -53,6 +53,17 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <!--bootstrap.properties doesn't work without this dependency-->
+        <!--https://newbedev.com/bootstrap-yml-configuration-not-processed-anymore-with-spring-cloud-2020-0-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
