Final Commit before Clients are refactored

--- a/human-records/pom.xml
+++ b/human-records/pom.xml
@@ -54,6 +54,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        This is for open feign-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
