--- a/human-records/src/main/resources/bootstrap.yml
+++ b/human-records/src/main/resources/bootstrap.yml
@@ -20,3 +20,9 @@ spring:
 #    web:
 #      exposure:
 #        include: "*"
+
+#  This is not needed as ribbon is deprecated and not included
+#  https://stackoverflow.com/questions/65469735/versions-spring-boot-spring-cloud-ribbon-not-working
+#    loadbalancer:
+#      ribbon:
+#        enabled: false
