--- a/config-server/src/main/resources/config/date-utils.properties
+++ b/config-server/src/main/resources/config/date-utils.properties
@@ -1,6 +1,9 @@
 #spring.application.name=date-utils
 server.port=9001
 #management.endpoints.web.exposure.include=*
+eureka.instance.preferIpAddress=true
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
 eureka.client.serviceUrl.defaultZone=http://eureka-server-peer-a:8761/eureka/,http://eureka-server-peer-b:8762/eureka/,http://eureka-server-peer-c:8763/eureka/
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
 
