--- a/config-server/src/main/resources/config/human-records-dev.properties
+++ b/config-server/src/main/resources/config/human-records-dev.properties
@@ -4,6 +4,10 @@ native.property=native-dev
 #spring.application.name=human-records
 #management.endpoints.web.exposure.include=*
 #server.port=8001
+
+eureka.instance.preferIpAddress=true
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
 eureka.client.serviceUrl.defaultZone=http://eureka-server-peer-a:8761/eureka/,http://eureka-server-peer-b:8762/eureka/,http://eureka-server-peer-c:8763/eureka/
 
 spring.sleuth.sampler.probability=1.0
