--- a/config-server/src/main/resources/config/human-records-prod.properties
+++ b/config-server/src/main/resources/config/human-records-prod.properties
@@ -5,6 +5,9 @@ server.port=8004
 
 native.property=native-prod
 
+eureka.instance.preferIpAddress=true
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
 eureka.client.serviceUrl.defaultZone=http://eureka-server-peer-a:8761/eureka/,http://eureka-server-peer-b:8762/eureka/,http://eureka-server-peer-c:8763/eureka/
 
 spring.sleuth.sampler.probability=1.0
