--- a/config-server/src/main/resources/config/human-records-qa.properties
+++ b/config-server/src/main/resources/config/human-records-qa.properties
@@ -6,6 +6,9 @@ server.port=8003
 
 native.property=native-qa
 
+eureka.instance.preferIpAddress=true
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
 eureka.client.serviceUrl.defaultZone=http://eureka-server-peer-a:8761/eureka/,http://eureka-server-peer-b:8762/eureka/,http://eureka-server-peer-c:8763/eureka/
 
 spring.sleuth.sampler.probability=1.0
