--- a/date-utils/src/main/resources/bootstrap.yml
+++ b/date-utils/src/main/resources/bootstrap.yml
@@ -11,3 +11,8 @@ management:
     web:
       exposure:
         include: "*"
+#  This is not needed as ribbon is deprecated and not included
+#  https://stackoverflow.com/questions/65469735/versions-spring-boot-spring-cloud-ribbon-not-working
+#    loadbalancer:
+#      ribbon:
+#        enabled: false
